.travis.yml: Workaround for rubygems/rubygems#1009.
"mime-types requires mime-types-data"

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ script:
   rake spec
 
 install:
-  gem install --prerelease --development nuggets
+  - gem install mime-types-data
+  - gem install --prerelease --development nuggets
 
 sudo:
   false
