.travis.yml: Workaround for rubygems/rubygems#1009. (2)
https://travis-ci.org/blackwinter/nuggets/jobs/124189111

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   rake spec
 
 install:
-  - gem install mime-types-data
+  - gem install nuggets mime-types-data
   - gem install --prerelease --development nuggets
 
 sudo:
