.travis.yml: Workaround for CocoaPods/Molinillo#13. (e8e7c16)
https://travis-ci.org/blackwinter/nuggets/jobs/124225493

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ script:
   rake spec
 
 install:
-  - gem install nuggets mime-types-data
-  - gem install --prerelease --development nuggets
+  - rake gem:dependencies:install
+  - gem install --prerelease nuggets
 
 sudo:
   false
